# doubutsu-nnue

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  worker.js
.cargo/: config.toml
.github/workflows/: pages.yml
learning/: arena.py  auto_train.py  pyproject.toml  training_nnue.py
pkg/: doubutsu_nnue.d.ts  doubutsu_nnue.js  doubutsu_nnue_bg.wasm  doubutsu_nnue_bg.wasm.d.ts  package.json
src/: board.rs  game.rs  lib.rs  main.rs  make_move.rs  move_gen.rs  nnue.rs  search.rs  zobrist.rs
